// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Preview nhs app form renders Routing feature flag - Disabled Client-side validation triggers 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-back-link"
    data-testid="back-to-templates-link"
    href="/message-templates"
    id="back-link"
  >
    Back to all templates
  </a>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <div
          aria-labelledby="error-summary-title"
          class="nhsuk-error-summary"
          role="alert"
          tabindex="-1"
        >
          <h2
            class="nhsuk-error-summary__title"
            data-testid="error-summary"
            id="error-summary-title"
          >
            There is a problem
          </h2>
          <ul
            class="nhsuk-list nhsuk-error-summary__list"
          >
            <li>
              <a
                href="#previewNHSAppTemplateAction"
              >
                Select an option
              </a>
            </li>
          </ul>
        </div>
        <div
          class="nhsuk-u-reading-width"
        >
          <span
            class="nhsuk-caption-l"
          >
            Template
          </span>
          <h1
            class="preview__heading"
            data-testid="preview-message__heading"
          >
            test-template-nhs app
          </h1>
        </div>
        <div
          class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
        >
          <dl
            class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
          >
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Template ID
              </dt>
              <dd
                class="nhsuk-summary-list__value monospace-font"
                data-testid="preview-template-id"
              >
                template-id
              </dd>
            </div>
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Type
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              />
            </div>
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Status
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              >
                <strong
                  class="nhsuk-tag nhsuk-tag--green"
                  data-test-id="status-tag-not-yet-submitted"
                >
                  Draft
                </strong>
              </dd>
            </div>
          </dl>
          <dl
            class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
          >
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                <div
                  data-testid="preview__heading-0"
                  id="preview-heading-message"
                >
                  Message
                </div>
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              >
                <div
                  class="preview__content"
                  data-testid="preview__content-0"
                  id="preview-content-message"
                />
              </dd>
            </div>
          </dl>
        </div>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="preview-nhs-app-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <div
            class="nhsuk-form-group nhsuk-form-group--error"
          >
            <fieldset
              class="nhsuk-fieldset"
            >
              <legend
                class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m"
                data-testid="previewNHSAppTemplateAction-form__legend"
              >
                What would you like to do next?
              </legend>
              <div
                class="nhsuk-form-group nhsuk-form-group--error"
              >
                <span
                  class="nhsuk-error-message"
                  id="previewNHSAppTemplateAction--error-message"
                >
                  <span
                    class="nhsuk-u-visually-hidden"
                  >
                    Error: 
                  </span>
                  Select an option
                </span>
                <div
                  aria-describedby="previewNHSAppTemplateAction--error-message"
                  class="nhsuk-radios"
                  id="previewNHSAppTemplateAction"
                >
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      data-testid="nhsapp-edit-radio"
                      id="previewNHSAppTemplateAction-nhsapp-edit"
                      name="previewNHSAppTemplateAction"
                      type="radio"
                      value="nhsapp-edit"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="previewNHSAppTemplateAction-nhsapp-edit"
                      id="previewNHSAppTemplateAction-nhsapp-edit--label"
                    >
                      Edit template
                    </label>
                  </div>
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      data-testid="nhsapp-submit-radio"
                      id="previewNHSAppTemplateAction-nhsapp-submit"
                      name="previewNHSAppTemplateAction"
                      type="radio"
                      value="nhsapp-submit"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="previewNHSAppTemplateAction-nhsapp-submit"
                      id="previewNHSAppTemplateAction-nhsapp-submit--label"
                    >
                      Submit template
                    </label>
                  </div>
                </div>
              </div>
            </fieldset>
          </div>
          <button
            aria-disabled="false"
            class="nhsuk-button"
            data-testid="submit-button"
            id="preview-nhs-app-template-submit-button"
            type="submit"
          >
            Continue
          </button>
        </form>
         
        <p>
          <a
            data-testid="back-to-templates-link-bottom"
            href="/message-templates"
          >
            Back to all templates
          </a>
        </p>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`Preview nhs app form renders Routing feature flag - Disabled matches error snapshot 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-back-link"
    data-testid="back-to-templates-link"
    href="/message-templates"
    id="back-link"
  >
    Back to all templates
  </a>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <div
          aria-labelledby="error-summary-title"
          class="nhsuk-error-summary"
          role="alert"
          tabindex="-1"
        >
          <h2
            class="nhsuk-error-summary__title"
            data-testid="error-summary"
            id="error-summary-title"
          >
            There is a problem
          </h2>
          <ul
            class="nhsuk-list nhsuk-error-summary__list"
          >
            <li>
              <a
                href="#previewNHSAppTemplateAction"
              >
                Select an option
              </a>
            </li>
          </ul>
        </div>
        <div
          class="nhsuk-u-reading-width"
        >
          <span
            class="nhsuk-caption-l"
          >
            Template
          </span>
          <h1
            class="preview__heading"
            data-testid="preview-message__heading"
          >
            test-template-nhs app
          </h1>
        </div>
        <div
          class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
        >
          <dl
            class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
          >
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Template ID
              </dt>
              <dd
                class="nhsuk-summary-list__value monospace-font"
                data-testid="preview-template-id"
              >
                template-id
              </dd>
            </div>
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Type
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              />
            </div>
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Status
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              >
                <strong
                  class="nhsuk-tag nhsuk-tag--green"
                  data-test-id="status-tag-not-yet-submitted"
                >
                  Draft
                </strong>
              </dd>
            </div>
          </dl>
          <dl
            class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
          >
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                <div
                  data-testid="preview__heading-0"
                  id="preview-heading-message"
                >
                  Message
                </div>
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              >
                <div
                  class="preview__content"
                  data-testid="preview__content-0"
                  id="preview-content-message"
                />
              </dd>
            </div>
          </dl>
        </div>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="preview-nhs-app-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <div
            class="nhsuk-form-group nhsuk-form-group--error"
          >
            <fieldset
              class="nhsuk-fieldset"
            >
              <legend
                class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m"
                data-testid="previewNHSAppTemplateAction-form__legend"
              >
                What would you like to do next?
              </legend>
              <div
                class="nhsuk-form-group nhsuk-form-group--error"
              >
                <span
                  class="nhsuk-error-message"
                  id="previewNHSAppTemplateAction--error-message"
                >
                  <span
                    class="nhsuk-u-visually-hidden"
                  >
                    Error: 
                  </span>
                  Select an option
                </span>
                <div
                  aria-describedby="previewNHSAppTemplateAction--error-message"
                  class="nhsuk-radios"
                  id="previewNHSAppTemplateAction"
                >
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      data-testid="nhsapp-edit-radio"
                      id="previewNHSAppTemplateAction-nhsapp-edit"
                      name="previewNHSAppTemplateAction"
                      type="radio"
                      value="nhsapp-edit"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="previewNHSAppTemplateAction-nhsapp-edit"
                      id="previewNHSAppTemplateAction-nhsapp-edit--label"
                    >
                      Edit template
                    </label>
                  </div>
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      data-testid="nhsapp-submit-radio"
                      id="previewNHSAppTemplateAction-nhsapp-submit"
                      name="previewNHSAppTemplateAction"
                      type="radio"
                      value="nhsapp-submit"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="previewNHSAppTemplateAction-nhsapp-submit"
                      id="previewNHSAppTemplateAction-nhsapp-submit--label"
                    >
                      Submit template
                    </label>
                  </div>
                </div>
              </div>
            </fieldset>
          </div>
          <button
            aria-disabled="false"
            class="nhsuk-button"
            data-testid="submit-button"
            id="preview-nhs-app-template-submit-button"
            type="submit"
          >
            Continue
          </button>
        </form>
         
        <p>
          <a
            data-testid="back-to-templates-link-bottom"
            href="/message-templates"
          >
            Back to all templates
          </a>
        </p>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`Preview nhs app form renders matches snapshot when navigating from edit screen when routing is false 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-back-link"
    data-testid="back-to-templates-link"
    href="/message-templates"
    id="back-link"
  >
    Back to all templates
  </a>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <div
          class="notify-confirmation-panel nhsuk-heading-l"
        >
          Template saved
        </div>
        <div
          class="nhsuk-u-reading-width"
        >
          <span
            class="nhsuk-caption-l"
          >
            Template
          </span>
          <h1
            class="preview__heading"
            data-testid="preview-message__heading"
          >
            test-template-nhs app
          </h1>
        </div>
        <div
          class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
        >
          <dl
            class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
          >
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Template ID
              </dt>
              <dd
                class="nhsuk-summary-list__value monospace-font"
                data-testid="preview-template-id"
              >
                template-id
              </dd>
            </div>
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Type
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              />
            </div>
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Status
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              >
                <strong
                  class="nhsuk-tag nhsuk-tag--green"
                  data-test-id="status-tag-not-yet-submitted"
                >
                  Draft
                </strong>
              </dd>
            </div>
          </dl>
          <dl
            class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
          >
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                <div
                  data-testid="preview__heading-0"
                  id="preview-heading-message"
                >
                  Message
                </div>
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              >
                <div
                  class="preview__content"
                  data-testid="preview__content-0"
                  id="preview-content-message"
                />
              </dd>
            </div>
          </dl>
        </div>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="preview-nhs-app-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <div
            class="nhsuk-form-group"
          >
            <fieldset
              class="nhsuk-fieldset"
            >
              <legend
                class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m"
                data-testid="previewNHSAppTemplateAction-form__legend"
              >
                What would you like to do next?
              </legend>
              <div
                class="nhsuk-form-group"
              >
                <div
                  class="nhsuk-radios"
                  id="previewNHSAppTemplateAction"
                >
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      data-testid="nhsapp-edit-radio"
                      id="previewNHSAppTemplateAction-nhsapp-edit"
                      name="previewNHSAppTemplateAction"
                      type="radio"
                      value="nhsapp-edit"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="previewNHSAppTemplateAction-nhsapp-edit"
                      id="previewNHSAppTemplateAction-nhsapp-edit--label"
                    >
                      Edit template
                    </label>
                  </div>
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      data-testid="nhsapp-submit-radio"
                      id="previewNHSAppTemplateAction-nhsapp-submit"
                      name="previewNHSAppTemplateAction"
                      type="radio"
                      value="nhsapp-submit"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="previewNHSAppTemplateAction-nhsapp-submit"
                      id="previewNHSAppTemplateAction-nhsapp-submit--label"
                    >
                      Submit template
                    </label>
                  </div>
                </div>
              </div>
            </fieldset>
          </div>
          <button
            aria-disabled="false"
            class="nhsuk-button"
            data-testid="submit-button"
            id="preview-nhs-app-template-submit-button"
            type="submit"
          >
            Continue
          </button>
        </form>
         
        <p>
          <a
            data-testid="back-to-templates-link-bottom"
            href="/message-templates"
          >
            Back to all templates
          </a>
        </p>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`Preview nhs app form renders matches snapshot when navigating from edit screen when routing is true 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-back-link"
    data-testid="back-to-templates-link"
    href="/message-templates"
    id="back-link"
  >
    Back to all templates
  </a>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <div
          class="notify-confirmation-panel nhsuk-heading-l"
        >
          Template saved
        </div>
        <div
          class="nhsuk-u-reading-width"
        >
          <span
            class="nhsuk-caption-l"
          >
            Template
          </span>
          <h1
            class="preview__heading"
            data-testid="preview-message__heading"
          >
            test-template-nhs app
          </h1>
        </div>
        <div
          class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
        >
          <dl
            class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
          >
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Template ID
              </dt>
              <dd
                class="nhsuk-summary-list__value monospace-font"
                data-testid="preview-template-id"
              >
                template-id
              </dd>
            </div>
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Type
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              />
            </div>
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Status
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              >
                <strong
                  class="nhsuk-tag nhsuk-tag--green"
                  data-test-id="status-tag-not-yet-submitted"
                >
                  Draft
                </strong>
              </dd>
            </div>
          </dl>
          <dl
            class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
          >
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                <div
                  data-testid="preview__heading-0"
                  id="preview-heading-message"
                >
                  Message
                </div>
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              >
                <div
                  class="preview__content"
                  data-testid="preview__content-0"
                  id="preview-content-message"
                />
              </dd>
            </div>
          </dl>
        </div>
        <a
          aria-disabled="false"
          class="nhsuk-button nhsuk-button--secondary"
          data-testid="edit-template-button"
          draggable="false"
          href="/edit-nhs-app-template/template-id"
          role="button"
        >
          Edit template
        </a>
         
        <p>
          <a
            data-testid="back-to-templates-link-bottom"
            href="/message-templates"
          >
            Back to all templates
          </a>
        </p>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`Preview nhs app form renders matches snapshot when navigating from manage templates screen when routing is false 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-back-link"
    data-testid="back-to-templates-link"
    href="/message-templates"
    id="back-link"
  >
    Back to all templates
  </a>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <div
          class="nhsuk-u-reading-width"
        >
          <span
            class="nhsuk-caption-l"
          >
            Template
          </span>
          <h1
            class="preview__heading"
            data-testid="preview-message__heading"
          >
            test-template-nhs app
          </h1>
        </div>
        <div
          class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
        >
          <dl
            class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
          >
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Template ID
              </dt>
              <dd
                class="nhsuk-summary-list__value monospace-font"
                data-testid="preview-template-id"
              >
                template-id
              </dd>
            </div>
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Type
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              />
            </div>
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Status
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              >
                <strong
                  class="nhsuk-tag nhsuk-tag--green"
                  data-test-id="status-tag-not-yet-submitted"
                >
                  Draft
                </strong>
              </dd>
            </div>
          </dl>
          <dl
            class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
          >
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                <div
                  data-testid="preview__heading-0"
                  id="preview-heading-message"
                >
                  Message
                </div>
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              >
                <div
                  class="preview__content"
                  data-testid="preview__content-0"
                  id="preview-content-message"
                />
              </dd>
            </div>
          </dl>
        </div>
        <form
          action="/action"
        >
          <input
            name="form-id"
            readonly=""
            type="hidden"
            value="preview-nhs-app-template"
          />
          <input
            name="csrf_token"
            readonly=""
            type="hidden"
            value="no_token"
          />
          <div
            class="nhsuk-form-group"
          >
            <fieldset
              class="nhsuk-fieldset"
            >
              <legend
                class="nhsuk-fieldset__legend nhsuk-fieldset__legend--m"
                data-testid="previewNHSAppTemplateAction-form__legend"
              >
                What would you like to do next?
              </legend>
              <div
                class="nhsuk-form-group"
              >
                <div
                  class="nhsuk-radios"
                  id="previewNHSAppTemplateAction"
                >
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      data-testid="nhsapp-edit-radio"
                      id="previewNHSAppTemplateAction-nhsapp-edit"
                      name="previewNHSAppTemplateAction"
                      type="radio"
                      value="nhsapp-edit"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="previewNHSAppTemplateAction-nhsapp-edit"
                      id="previewNHSAppTemplateAction-nhsapp-edit--label"
                    >
                      Edit template
                    </label>
                  </div>
                  <div
                    class="nhsuk-radios__item"
                  >
                    <input
                      class="nhsuk-radios__input"
                      data-testid="nhsapp-submit-radio"
                      id="previewNHSAppTemplateAction-nhsapp-submit"
                      name="previewNHSAppTemplateAction"
                      type="radio"
                      value="nhsapp-submit"
                    />
                    <label
                      class="nhsuk-label nhsuk-radios__label"
                      for="previewNHSAppTemplateAction-nhsapp-submit"
                      id="previewNHSAppTemplateAction-nhsapp-submit--label"
                    >
                      Submit template
                    </label>
                  </div>
                </div>
              </div>
            </fieldset>
          </div>
          <button
            aria-disabled="false"
            class="nhsuk-button"
            data-testid="submit-button"
            id="preview-nhs-app-template-submit-button"
            type="submit"
          >
            Continue
          </button>
        </form>
         
        <p>
          <a
            data-testid="back-to-templates-link-bottom"
            href="/message-templates"
          >
            Back to all templates
          </a>
        </p>
      </div>
    </div>
  </main>
</DocumentFragment>
`;

exports[`Preview nhs app form renders matches snapshot when navigating from manage templates screen when routing is true 1`] = `
<DocumentFragment>
  <a
    class="nhsuk-back-link"
    data-testid="back-to-templates-link"
    href="/message-templates"
    id="back-link"
  >
    Back to all templates
  </a>
  <main
    class="nhsuk-main-wrapper"
    id="maincontent"
    role="main"
  >
    <div
      class="nhsuk-grid-row"
    >
      <div
        class="nhsuk-grid-column-full"
      >
        <div
          class="nhsuk-u-reading-width"
        >
          <span
            class="nhsuk-caption-l"
          >
            Template
          </span>
          <h1
            class="preview__heading"
            data-testid="preview-message__heading"
          >
            test-template-nhs app
          </h1>
        </div>
        <div
          class="nhsuk-width-container nhsuk-u-margin-bottom-6 nhsuk-body-m"
        >
          <dl
            class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
          >
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Template ID
              </dt>
              <dd
                class="nhsuk-summary-list__value monospace-font"
                data-testid="preview-template-id"
              >
                template-id
              </dd>
            </div>
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Type
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              />
            </div>
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                Status
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              >
                <strong
                  class="nhsuk-tag nhsuk-tag--green"
                  data-test-id="status-tag-not-yet-submitted"
                >
                  Draft
                </strong>
              </dd>
            </div>
          </dl>
          <dl
            class="nhsuk-summary-list nhsuk-u-margin-bottom-4 preview"
          >
            <div
              class="nhsuk-summary-list__row"
            >
              <dt
                class="nhsuk-summary-list__key"
              >
                <div
                  data-testid="preview__heading-0"
                  id="preview-heading-message"
                >
                  Message
                </div>
              </dt>
              <dd
                class="nhsuk-summary-list__value"
              >
                <div
                  class="preview__content"
                  data-testid="preview__content-0"
                  id="preview-content-message"
                />
              </dd>
            </div>
          </dl>
        </div>
        <a
          aria-disabled="false"
          class="nhsuk-button nhsuk-button--secondary"
          data-testid="edit-template-button"
          draggable="false"
          href="/edit-nhs-app-template/template-id"
          role="button"
        >
          Edit template
        </a>
         
        <p>
          <a
            data-testid="back-to-templates-link-bottom"
            href="/message-templates"
          >
            Back to all templates
          </a>
        </p>
      </div>
    </div>
  </main>
</DocumentFragment>
`;
